Correction alignement button ajouter

--- a/MernApp/client/src/components/CreateList/CreateList.scss
+++ b/MernApp/client/src/components/CreateList/CreateList.scss
@@ -211,6 +211,7 @@ button {
     height: 40px;
     text-align: center; 
     padding: 6px; 
+    align-self: center;
     
 }
 
